frontend/src/styles/nav.scss
@use "./util.scss" as *;

#channel-nav {
	width: 100%;
	height: 100%;
	background-color: $bg-150;
	color: $fg-200;
	overflow-y: auto;
	display: flex;
	flex-direction: column;
	scrollbar-width: none;
	grid-area: channel-nav;

	& > header {
		z-index: 1;
		min-height: 48px;
	}

	& > ul {
		padding-top: 8px;
		padding-bottom: 240px;
		display: flex;
		flex-direction: column;
	}

	& li {
		margin-top: 0.025rem;
	}

	& a {
		@include truncate;
		display: block;
		width: 100%;
		padding: 2px 8px;
		background-color: none;
		text-decoration: none;
		white-space: nowrap;
		color: $fg-400;

		&.active {
			background-color: $bg-300;
		}

		&:hover,
		&:focus {
			background-color: $bg-400;
		}

		&.closed {
			color: $sep-500;
		}
	}

	& header {
		/* TODO: make this its own root grid section */
		position: sticky;
		top: 0;
		background: $bg-100;
		padding: 8px 16px;
		border-bottom: solid $sep-300 1px;
	}

	li {
		padding: 0 8px;

		&.dragging {
			opacity: 0.5;
		}

		&.unread > a {
			font-weight: bold;
			color: $fg-200;
			position: relative;

			&::before {
				position: absolute;
				top: 10%;
				left: 0;
				content: "";
				border-left: solid $sep-500 3px;
				height: 80%;
			}
		}

		.menu-thread {
			display: flex;
			align-items: center;
			gap: 8px;

			.avatar {
				height: 24px;
				width: 24px;
			}
		}

		.threads {
			margin-left: -8px;

			& > li > a {
				padding-left: 24px;
			}
		}
	}

	.category {
		cursor: pointer;
	}

	.category-toggle {
		margin-right: 4px;
	}

	.voice-participant {
		display: flex;
		margin-left: 16px;
		align-items: center;
		line-height: 1;
		margin-top: 4px;
		margin-bottom: 4px;
		gap: 8px;
		padding: 2px 0 2px 16px;

		.avatar {
			height: 20px;
			width: 20px;
		}

		.fallback-avatar {
			height: 1rem;
			width: 1rem;
			background: oklch(var(--color-sep));
			border-radius: 2px;
		}

		img {
			height: 1rem;
			width: 1rem;
			border-radius: 2px;
		}

		&.speaking img,
		&.speaking .fallback-avatar {
			border: solid $color-green 2px;
		}
	}

	.nav-channel {
		display: flex;
		align-items: center;
		padding: 4px 8px;

		& > .avatar {
			height: 32px;
			width: 32px;
			margin: 0;
			margin-right: 8px;
		}

		& > .icon {
			height: 16px;
			width: 16px;
			margin-right: 4px;
			filter: invert(0.6);
		}

		& > .mentions {
			background: oklch(54.03% 0.1759 13.16);
			height: 16px;
			min-width: 16px;
			border-radius: 10px;
			display: flex;
			align-items: center;
			justify-content: center;
			font-weight: bold;
			padding: 0 4px;
		}

		& > button {
			display: none;
			border: none;
			background: none;
			padding: 4px;
			margin: -4px 0;
			margin-right: -4px;
			align-items: center;

			& > .icon {
				height: 14px;
				width: 14px;
				filter: invert(0.7);
			}

			&:hover > .icon {
				filter: invert(0.9);
			}
		}

		&:hover > button {
			display: flex;
		}

		&:hover > .mentions {
			display: none;
		}
	}
}

#room-nav {
	width: 64px;
	display: flex;
	justify-content: center;
	grid-area: room-nav;
	overflow: auto;
	padding-top: 4px;
	background-color: $bg-100;

	& > ul {
		flex-direction: column;
		align-items: center;
	}

	.room-item,
	.home-item {
		min-height: 48px;
		width: 48px;
		margin-top: 4px;
		border-radius: 4px;
		display: flex;
		overflow: hidden;
		background: #2a2a2a;

		&.dragging {
			opacity: 0.5;
		}

		& .avatar {
			height: 48px;
			width: 48px;
			background: none;
		}

		& a {
			padding: 0;
		}
	}

	.folder-header {
		height: 48px;
		width: 48px;
		border-radius: 4px;
		background: #2a2a2a;
		cursor: pointer;

		&:hover {
			background: $bg-150;
		}
	}

	.room-folder {
		margin: 0 -2px;
		margin-top: 4px;
		padding: 2px;
		background: $bg-400;
		border-radius: 4px;

		&.collapsed {
			background: none;
		}
	}
}

